# NAGATO

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING_ja.md  LICENSE  POLICIES.md  POLICIES_ja.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sample.robot  scripts.py  setup.py  sort_requirements.py  third-party-notices.txt  third-party-packages.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  formatter.yml  gendocs.yml  libdoc.yml  publish.yml  third-party-docs.yml  third-party-notices.yml  unittest.yml
Unittest/TextFSM/: _cli_outputs.py  test_show_bundle_bundle-ether.py
docs/: Cisco_IOS_XR.html  IxNetworkLibrary.html  Juniper_Junos.html  NetmikoLibrary.html  PcapFileReader.html  SNMP.html  index.md
src/NAGATO/: PcapFileReader.py  SNMP.py  __init__.py  version.py
src/NAGATO/IxNetworkLibrary/: __init__.py  _wrapper.py
src/NAGATO/NetmikoLibrary/: README.md  __init__.py  _wrapper.py  set_templates.py
src/NAGATO/NetmikoLibrary/apresia/: apresia_amios.py
src/NAGATO/NetworkUtils/: __init__.py
src/NAGATO/Resources/: Cisco_IOS_XR.resource  IOSXRKeywords.resource  Juniper_Junos.resource
src/NAGATO/templates/: cisco_xr_show_access-lists.textfsm  cisco_xr_show_access-lists_interface.textfsm  cisco_xr_show_bgp_ipv4_unicast.textfsm  cisco_xr_show_bgp_ipv4_unicast_advertised_neighbor.textfsm  cisco_xr_show_bgp_ipv6_unicast.textfsm  cisco_xr_show_bgp_neighbor_brief.textfsm  cisco_xr_show_bgp_sessions.textfsm  cisco_xr_show_bgp_vrf_all_ipv4_unicast_summary.textfsm  cisco_xr_show_bundle_bundle-ether.textfsm  cisco_xr_show_ethernet_oam_event-log.textfsm  cisco_xr_show_ipv6_interface.textfsm  cisco_xr_show_ntp_associations.textfsm  cisco_xr_show_ospf.textfsm  cisco_xr_show_ospf_interface.textfsm  cisco_xr_show_ospf_vrf.textfsm  cisco_xr_show_ospfv3.textfsm  cisco_xr_show_ospfv3_interface.textfsm  cisco_xr_show_ospfv3_neighbor.textfsm  cisco_xr_show_ospfv3_vrf.textfsm  cisco_xr_show_protocols_ipv4_ospf.textfsm  cisco_xr_show_protocols_ipv6_ospf.textfsm  cisco_xr_show_route_ipv4.textfsm  cisco_xr_show_route_ipv4_summary.textfsm  cisco_xr_show_route_ipv6.text.fsm  cisco_xr_show_route_ipv6.textfsm  cisco_xr_show_vrf.textfsm  index  juniper_junos_show_chassis_environment.textfsm  juniper_junos_show_chassis_routing-engine.textfsm  nagato_cisco_xr_admin_show_platform.textfsm
tests/NetmikoLibrary/: fixtures.py  test_NetmikoLibrary.py
tests/NetmikoLibrary/templates/: _cli_outputs.py  test_cisco_show_lacp_counters.py  test_cisco_xr_show_access-lists.py  test_cisco_xr_show_access-lists_interface.py  test_cisco_xr_show_arm_router-ids.py  test_cisco_xr_show_bfd_ipv4.py  test_cisco_xr_show_bfd_ipv4_session.py  test_cisco_xr_show_bfd_ipv4_session_detail.py  test_cisco_xr_show_bfd_ipv6.py  test_cisco_xr_show_bfd_ipv6_session.py  test_cisco_xr_show_bgp_ipv4_unicast.py  test_cisco_xr_show_bgp_ipv4_unicast_advertised_neighbor.py  test_cisco_xr_show_bgp_ipv4_unicast_neighbors.py  test_cisco_xr_show_bgp_ipv6_unicast.py  test_cisco_xr_show_bgp_ipv6_unicast_advertised_neighbor.py  test_cisco_xr_show_bgp_ipv6_unicast_neighbors.py  test_cisco_xr_show_bgp_ipv6_unicast_neighbors_brief.py  test_cisco_xr_show_bgp_ipv6_unicast_network.py  test_cisco_xr_show_bgp_neighbor_brief.py  test_cisco_xr_show_bgp_neighbors_brief.py  test_cisco_xr_show_bgp_sessions.py  test_cisco_xr_show_bgp_vrf_all_ipv4_unicast_summary.py  test_cisco_xr_show_bgp_vrf_all_ipv6_unicast_summary.py  test_cisco_xr_show_bundle_bundle-ether.py  test_cisco_xr_show_ethernet_oam_event-log.py  test_cisco_xr_show_interfaces_brief.py  test_cisco_xr_show_ipv6_interface.py  test_cisco_xr_show_lacp.py  test_cisco_xr_show_lacp_io.py  test_cisco_xr_show_ntp_associations.py  test_cisco_xr_show_ospf.py  test_cisco_xr_show_ospf_interface.py  test_cisco_xr_show_ospf_vrf.py  test_cisco_xr_show_ospfv3.py  test_cisco_xr_show_ospfv3_interface.py  test_cisco_xr_show_ospfv3_neighbor.py  test_cisco_xr_show_ospfv3_vrf.py  test_cisco_xr_show_protocols_ipv4_ospf.py  test_cisco_xr_show_protocols_ipv6_ospfv3.py  test_cisco_xr_show_route_ipv4.py  (+12 more)
tests/PcapFileReader/: test_PcapFileReader.py
tests/Resources/IOSXRKeywords/: config_file_should_exist.robot  get_file_content.robot  load_and_commit_replace.robot  unittest.yml
tests/Resources/JuniperKeywords/: request_system_halt.robot  request_system_reboot.robot  start_shell_mode.robot  unittest.yml
tests/SNMP/: test_SNMP.py
