[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nagato"
version = "0.0.1"
authors = [
    {name = "Takumi Nohara", email = "takumi.nohara.571@ctc-g.co.jp"},
]
description = "NAGATO: Network Automation Gears and Test Orchestrator"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Robot Framework",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "ixnetwork-restpy>=1.1.10",
    "netmiko>=4.0.0",
    "ntc-templates>=3.5.0",
    "pysnmplib>=5.0.20",
    "robotframework>=5.0.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "ipython",
    "isort",
    "pytest"
]

[tool.setuptools.package-dir]
NAGATO = "src/NAGATO"

[tool.isort]
profile = "black"

[project.scripts]
copy-templates = "NAGATO.scripts:copy_templates"

# TODO: 環境変数(NET_TEXTFSM)、alias(-dでlog格納先を指定)周りの設定
# TODO: pip installした後のtamplatesをコピーして移動、indexは上書き
# TODO: formatter、unittest、libdocをCI/CDで回す