[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 300

[tool.isort]
profile = "black"

[tool.poetry]
name = "nagato"
version = "0.0.1"
authors = [
  "Takumi Nohara <takumi.nohara.571@ctc-g.co.jp>"
]
description = "NAGATO: Network Automation Gears and Test Orchestrator"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Framework :: Robot Framework",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9"
]
packages = [
  {include = "NAGATO", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
ixnetwork-restpy = ">=1.1.10"
netmiko = ">=4.0.0"
ntc-templates = ">=3.5.0"
pyshark = ">=0.6"
pysnmplib = ">=5.0.20"
robotframework = ">=5.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.9.1"
ipython = [
  {version = "==8.13.0", python = "==3.8"},
  {version = ">=8.15.0", python = ">=3.9"}
]
isort = ">=5.12.0"
pytest = ">=7.4.2"
robotframework-tidy = ">=4.5.0"
toml-sort = ">=0.23.1"

[[tool.poetry.source]]
name = "files"
url = "https://files.pythonhosted.org/"
priority = "supplemental"

[tool.robotidy]
diff = true
configure = [
  "NormalizeAssignments:equal_sign_type=space_and_equal_sign",
  "NormalizeAssignments:equal_sign_type_variables=space_and_equal_sign",
  "NormalizeTags:normalize_case=False",
  "ReplaceRunKeywordIf:enabled=False",
  "SplitTooLongLine:enabled=False"
]

[tool.setuptools.package-dir]
NAGATO = "src/NAGATO"

# TODO: 環境変数(NET_TEXTFSM)、alias(-dでlog格納先を指定)周りの設定
